# simple

./: .gitignore  .gitmodules  .project  README.md  pom.xml
R/: Makefile  MetricTest.R
R/VFAnalyticsPackage/: DESCRIPTION  NAMESPACE  NEWS
R/VFAnalyticsPackage/R/: Classes.R  Methods.R
R/rprotoserve.backup/src/: rprotoserve
R/rprotoserve/R/src/: main.c  rexp.proto
R/rprotoserve/rprotoserve.xcodeproj/: project.pbxproj
R/rprotoserve/rprotoserve/rprotoserve.xcodeproj/: project.pbxproj
R/rprotoserve/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rprotoserve
R/rprotoserve/src/R/: Makefile  rexp.pb.h  rexp.proto  rprotoserve.cc  rprotoserve.h
R/rprotoserve/src/R/old/: Makefile  display.cc  main.cc  message.cc  r_session.cc  rexp.pb.cc  rpc_server.cc  rprotoserve.h
R/rprotoserve/src/client/c/: CMakeLists.txt  Makefile  cli.c  client.c  client.h  cmake_install.cmake  rprotoserve
R/rprotoserve/src/common/: Makefile
R/rprotoserve/src/common/generated-code/: .rexp.pb-c.h.swp
R/rprotoserve/src/protobuf/: CMakeLists.txt  Makefile  cmake_install.cmake  rexp.pb-c.h  rexp.proto
R/rprotoserve/src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  message.c  radapter.c  radapter.h  rprotoserve  rprotoserve.c  server.h
R/rprotoserve/src/test/: CMakeLists.txt  test_r_adapter.c  test_r_client.c
R/scripts/: P without query from local.R  Pchart_week_New.txt  Pchart_week_equal_sample_size.txt
api/: .classpath  .project  pom.xml
artisan-utils/: .classpath  .project  pom.xml
conf/: README.TXT
conf/hadoop/: core-site.xml  hdfs-site.xml  mapred-site.xml  yarn-site.xml
conf/zoo/: zoo.cfg
docs/: Orchestrator.docx  README.md
domain/: .classpath  .project  pom.xml
engine/: .classpath  .project  build.xml  log4j.xml  pom.xml  taskengine-server.properties  vf-taskengine  vf-taskengine.sh
engine/src/main/protobuf/: metrics.proto
engine/src/main/resources/: engine.properties  log4j.properties
engine/src/test/resources/: logging.properties
local_repo/: README
local_repo/com/google/codemirror2/: maven-metadata.xml.md5  maven-metadata.xml.sha1
local_repo/org/apache/axis2/: maven-metadata.xml.md5  maven-metadata.xml.sha1
modules/api/: .classpath  pom.xml
modules/domain/: .project  pom.xml
modules/install/: README.txt
modules/install/src/sbin/: artisan
modules/orchestrator/: .classpath  .project  pom.xml
modules/orchestrator/api/: .classpath  .project  pom.xml
modules/orchestrator/client/: .classpath  .project  pom.xml
modules/orchestrator/server/: .classpath  .project  pom.xml
modules/radapter/: .classpath  .project  pom.xml
modules/radapter/java/: .classpath  .project  pom.xml
modules/reporting/: .project  pom.xml
modules/repository/: .classpath  pom.xml
modules/security/: .project  pom.xml
modules/utils/: .classpath  .project  pom.xml
modules/web/: .classpath  .factorypath  .project  pom.xml
orchestrator/: pom.xml
orchestrator/api/: .classpath  .project  pom.xml
orchestrator/client/: .project  pom.xml
orchestrator/client/rest/: .classpath  .project  pom.xml
orchestrator/server/: .classpath  .project  pom.xml
radapter/: pom.xml
radapter/java/: .classpath  .project  pom.xml
radapter/native/: .classpath  .project  pom.xml
radapter/native/nix/: pom.xml
radapter/native/osx/: pom.xml
reporting/: .classpath  .project  pom.xml
repository/: .classpath  .project  pom.xml
security/: .classpath  .project  pom.xml
ui/: .classpath  .project  build.xml  pom.xml
web/: .classpath  .project  pom.xml
(+1880 files in other folders)
